[gd_scene load_steps=14 format=3 uid="uid://b4rvmblkeug6b"]

[ext_resource type="Environment" uid="uid://c5qu6qq326wkt" path="res://assets/VillageNight.tres" id="1_jxp5o"]
[ext_resource type="Script" uid="uid://des8xe3t7ejar" path="res://src/Scripts/subworld.gd" id="1_k3y1b"]
[ext_resource type="PackedScene" uid="uid://v5s1gch7apbr" path="res://assets/Models/Characters/SquirrelNPC.fbx" id="3_b0cvk"]
[ext_resource type="PackedScene" uid="uid://b47nmpt8vhlg3" path="res://assets/Models/Characters/BunnyNPC.fbx" id="4_k4ugi"]
[ext_resource type="PackedScene" uid="uid://dv4khe3gm0cp" path="res://assets/Models/Characters/WolfTraveller.fbx" id="5_0ku5y"]
[ext_resource type="PackedScene" uid="uid://bw8pq6pfyihem" path="res://assets/Models/Characters/SquirrelLumberjack.fbx" id="5_g6nti"]
[ext_resource type="PackedScene" uid="uid://b6vb4ak58jaby" path="res://src/Scenes/text_box.tscn" id="7_0ku5y"]
[ext_resource type="Script" uid="uid://cc2pmrgy710di" path="res://src/Scenes/VillageScenes/morning_cutscene_logic.gd" id="7_tj7du"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0ku5y"]
animation = &"root|Give Hands Pose"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k3y1b"]
animation = &"root|Idle"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_7k354"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_qeubx"]
graph_offset = Vector2(-533.422, -14.4951)
nodes/Animation/node = SubResource("AnimationNodeAnimation_k3y1b")
nodes/Animation/position = Vector2(-60, 20)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_0ku5y")
"nodes/Animation 2/position" = Vector2(-200, 200)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_7k354")
nodes/Blend2/position = Vector2(120, 60)
nodes/output/position = Vector2(320, 160)
node_connections = [&"Blend2", 0, &"Animation", &"Blend2", 1, &"Animation 2", &"output", 0, &"Blend2"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tj7du"]
animation = &"root|Idle"

[node name="VillageMorn" type="Node3D"]
script = ExtResource("1_k3y1b")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_jxp5o")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.37943, 0.802931, 0.459712, 0.74219, -0.560813, 0.366937, 0.552438, 0.201966, -0.808716, 0, 12.1965, 0)
light_color = Color(0.73417, 0.813643, 0.570072, 1)
shadow_enabled = true
directional_shadow_mode = 0
directional_shadow_blend_splits = true
directional_shadow_max_distance = 82.0

[node name="SquirrelNPC" parent="." instance=ExtResource("3_b0cvk")]
transform = Transform3D(0.987253, 0, -0.159158, 0, 1, 0, 0.159158, 0, 0.987253, 21.5446, 1.11601, -0.901118)

[node name="BunnyNPC" parent="." instance=ExtResource("4_k4ugi")]
transform = Transform3D(0.529742, 0, 0.848159, 0, 1, 0, -0.848159, 0, 0.529742, 13.7442, -4.76837e-07, 4.36276)

[node name="SquirrelLumberjack" parent="." instance=ExtResource("5_g6nti")]
transform = Transform3D(0.999898, 0, -0.0142589, 0, 1, 0, 0.0142589, 0, 0.999898, 30.6485, 0, 8.74922)

[node name="Skeleton3D" parent="SquirrelLumberjack/root" index="0"]
bones/1/position = Vector3(-1.4745e-05, 0.00379498, 1.01734e-05)
bones/1/rotation = Quaternion(0.000311876, -0.000123522, -0.000135892, 1)
bones/1/scale = Vector3(1, 1, 1)
bones/2/position = Vector3(0.000699777, 5.20417e-18, -1.97728e-09)
bones/2/rotation = Quaternion(0.764535, 0.0989717, 0.636449, 0.0249773)
bones/2/scale = Vector3(1, 1, 1)
bones/3/position = Vector3(6.19577e-13, 0.00147782, 5.21274e-11)
bones/3/rotation = Quaternion(-1.84206e-07, 9.75334e-09, 0.260157, 0.965566)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(6.36085e-12, 0.00215671, -3.75266e-11)
bones/4/rotation = Quaternion(0.565263, 0.296327, -0.467197, 0.611878)
bones/4/scale = Vector3(1, 1, 1)
bones/5/position = Vector3(3.43962e-11, 0.000416751, 1.44537e-10)
bones/5/rotation = Quaternion(0.0191062, 0.997577, 0.0667525, 0.00433357)
bones/5/scale = Vector3(1, 1, 1)
bones/6/position = Vector3(-1.56772e-11, 0.00107836, -7.31875e-11)
bones/6/rotation = Quaternion(-1.33582e-07, -0.331862, -1.35425e-07, 0.943328)
bones/6/scale = Vector3(1, 1, 1)
bones/7/position = Vector3(-1.01727e-11, -1.643e-13, 5.65387e-11)
bones/7/rotation = Quaternion(-1.92201e-07, -0.115372, 5.58234e-07, 0.993322)
bones/7/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(-0.000699777, -6.07153e-18, 1.97877e-09)
bones/8/rotation = Quaternion(0.798095, -0.100665, -0.593999, 0.00873376)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(-4.97086e-12, 0.00147782, -5.43556e-12)
bones/9/rotation = Quaternion(-9.35937e-08, 2.05563e-10, -0.228922, 0.973445)
bones/9/scale = Vector3(1, 1, 1)
bones/10/position = Vector3(4.30956e-12, 0.00215671, 7.63938e-12)
bones/10/rotation = Quaternion(-0.517993, 0.351546, -0.503511, -0.595463)
bones/10/scale = Vector3(1, 1, 1)
bones/11/position = Vector3(3.53436e-13, 0.000416751, -2.47494e-12)
bones/11/rotation = Quaternion(-0.0191069, 0.997577, 0.0667617, -0.00433357)
bones/11/scale = Vector3(1, 1, 1)
bones/12/position = Vector3(7.73241e-11, 0.00107836, 7.98764e-12)
bones/12/rotation = Quaternion(-1.07799e-07, 0.255312, 2.55126e-08, 0.966859)
bones/12/scale = Vector3(1, 1, 1)
bones/13/position = Vector3(-7.50464e-12, 3.56269e-15, -3.29375e-12)
bones/13/rotation = Quaternion(-2.0726e-07, 0.0610562, -4.42385e-07, 0.998134)
bones/13/scale = Vector3(1, 1, 1)
bones/14/position = Vector3(6.88169e-11, 0.000806044, 2.43365e-05)
bones/14/rotation = Quaternion(0.00752852, 1.41382e-06, -1.06443e-08, 0.999972)
bones/14/scale = Vector3(1, 1, 1)
bones/15/position = Vector3(-2.02955e-19, 0.000806565, -3.11662e-12)
bones/15/rotation = Quaternion(-0.0350319, 5.02333e-10, 8.0912e-09, 0.999386)
bones/15/scale = Vector3(1, 1, 1)
bones/16/position = Vector3(-2.38051e-24, 0.000806938, 1.21528e-11)
bones/16/rotation = Quaternion(-0.0125002, 3.10105e-20, 1.40212e-21, 0.999922)
bones/16/scale = Vector3(1, 1, 1)
bones/17/position = Vector3(8.01187e-32, 0.000803725, -1.756e-11)
bones/17/rotation = Quaternion(0.0517506, 0.00161135, -0.000244854, 0.998659)
bones/17/scale = Vector3(1, 1, 1)
bones/18/position = Vector3(-1.03559e-17, 0.000454168, 8.57551e-11)
bones/18/rotation = Quaternion(-0.030045, -0.00548639, 0.000164906, 0.999534)
bones/18/scale = Vector3(1, 1, 1)
bones/19/position = Vector3(-0.000472473, 0.000270747, -0.000120581)
bones/19/rotation = Quaternion(-0.472856, 0.43618, 0.537794, 0.544914)
bones/20/position = Vector3(-2.98023e-11, 0.000500425, -5.74115e-14)
bones/20/rotation = Quaternion(-0.378618, 0.442993, 0.53241, 0.613959)
bones/20/scale = Vector3(1, 1, 1)
bones/21/position = Vector3(1.79095e-12, 0.00144317, -2.8302e-10)
bones/21/rotation = Quaternion(-4.47106e-08, -2.00453e-08, -0.0233568, 0.999727)
bones/21/scale = Vector3(1, 1, 1)
bones/22/position = Vector3(2.38552e-11, 0.00144464, 6.89906e-10)
bones/22/rotation = Quaternion(-0.0369455, -0.646723, 0.182048, 0.739759)
bones/22/scale = Vector3(1, 1, 1)
bones/23/position = Vector3(-0.000231544, 0.000189973, -0.000102984)
bones/23/rotation = Quaternion(-0.126747, -0.656605, 0.236855, 0.704772)
bones/23/scale = Vector3(1, 1, 1)
bones/24/position = Vector3(-3.71286e-10, 0.000285259, 3.23934e-10)
bones/24/rotation = Quaternion(-0.142544, -0.0213863, -0.0556561, 0.987991)
bones/24/scale = Vector3(1, 1, 1)
bones/25/position = Vector3(9.64283e-10, 0.000156301, -2.25179e-10)
bones/25/rotation = Quaternion(-0.103496, -0.0267702, -0.0371655, 0.993575)
bones/25/scale = Vector3(1, 1, 1)
bones/26/position = Vector3(-0.000214325, 0.000502337, -2.44691e-05)
bones/26/rotation = Quaternion(0.0122504, -0.0405832, -0.0250062, 0.998788)
bones/26/scale = Vector3(1, 1, 1)
bones/27/position = Vector3(5.47627e-11, 9.01242e-05, -6.53711e-10)
bones/27/rotation = Quaternion(-0.0966549, 0.0510887, 0.0409683, 0.993161)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(-3.29599e-11, 0.000235625, -5.11503e-11)
bones/28/rotation = Quaternion(-0.295929, 0.157345, -0.269514, 0.902791)
bones/28/scale = Vector3(1, 1, 1)
bones/29/position = Vector3(-2.98536e-05, 0.000113964, -4.95349e-06)
bones/29/rotation = Quaternion(0.025899, 0.895142, -0.00358996, 0.445014)
bones/29/scale = Vector3(1, 0.999999, 1)
bones/30/position = Vector3(2.07021e-10, 0.000365999, 3.59892e-10)
bones/30/rotation = Quaternion(0.0258987, 0.895142, -0.00359084, -0.445014)
bones/30/scale = Vector3(1, 1, 1)
bones/31/position = Vector3(-1.74583e-10, 0.000138173, 4.24835e-10)
bones/31/rotation = Quaternion(-0.14667, 0.00249119, -0.0371634, 0.988484)
bones/31/scale = Vector3(1, 1, 1)
bones/32/position = Vector3(-1.21455e-11, 0.000251235, -4.27847e-11)
bones/32/rotation = Quaternion(-0.424562, 0.00261746, -0.00514835, 0.90538)
bones/32/scale = Vector3(1, 1, 1)
bones/33/position = Vector3(1.08562e-11, 0.000722322, 1.55834e-10)
bones/33/rotation = Quaternion(-3.08632e-07, -0.668094, -1.87819e-07, 0.744077)
bones/33/scale = Vector3(1, 1, 1)
bones/34/position = Vector3(7.90085e-12, -9.52131e-11, -1.58929e-12)
bones/34/rotation = Quaternion(2.92542e-08, -0.415067, -5.5096e-08, 0.909791)
bones/34/scale = Vector3(1, 1, 1)
bones/35/position = Vector3(0.000889887, 0.000366537, -0.000129801)
bones/35/rotation = Quaternion(-0.451572, -0.321655, -0.554273, 0.620808)
bones/35/scale = Vector3(1, 1, 1)
bones/36/position = Vector3(2.98023e-11, 0.000500425, -5.73994e-14)
bones/36/rotation = Quaternion(-0.619689, -0.280411, -0.441471, 0.585199)
bones/36/scale = Vector3(1, 1, 1)
bones/37/position = Vector3(-1.79095e-12, 0.00144317, -2.8302e-10)
bones/37/rotation = Quaternion(-1.26672e-07, 3.68197e-09, -0.37106, 0.928609)
bones/37/scale = Vector3(1, 1, 1)
bones/38/position = Vector3(-2.38552e-11, 0.00144464, 6.89906e-10)
bones/38/rotation = Quaternion(-0.0273016, -0.62549, -0.0117431, 0.779666)
bones/38/scale = Vector3(1, 1, 1)
bones/39/position = Vector3(0.000231544, 0.000189973, -0.000102984)
bones/39/rotation = Quaternion(-0.183136, 0.656457, -0.0446582, 0.730432)
bones/39/scale = Vector3(1, 1, 1)
bones/40/position = Vector3(3.71286e-10, 0.000285259, 3.23934e-10)
bones/40/rotation = Quaternion(-0.145236, 0.0217123, 0.0577762, 0.98747)
bones/40/scale = Vector3(1, 1, 1)
bones/41/position = Vector3(-9.64283e-10, 0.000156301, -2.25179e-10)
bones/41/rotation = Quaternion(-0.103496, 0.0267702, 0.0371655, 0.993575)
bones/41/scale = Vector3(1, 1, 1)
bones/42/position = Vector3(0.000215089, 0.000501855, -2.44559e-05)
bones/42/rotation = Quaternion(0.0160435, 0.0429099, 0.0286588, 0.998539)
bones/42/scale = Vector3(1, 1, 1)
bones/43/position = Vector3(-5.47627e-11, 9.01242e-05, -6.53711e-10)
bones/43/rotation = Quaternion(-0.16927, -0.0419696, -0.0622223, 0.982708)
bones/43/scale = Vector3(1, 1, 1)
bones/44/position = Vector3(3.29599e-11, 0.000235625, -5.11503e-11)
bones/44/rotation = Quaternion(-0.107694, -0.627602, 0.228883, 0.736295)
bones/44/scale = Vector3(1, 1, 1)
bones/45/position = Vector3(1.81396e-05, 0.00011605, -6.08509e-06)
bones/45/rotation = Quaternion(0.00831989, -0.000206316, 0.0247876, 0.999658)
bones/45/scale = Vector3(1, 1, 1)
bones/46/position = Vector3(-4.6528e-12, 0.000365999, -7.88562e-14)
bones/46/rotation = Quaternion(-0.00831895, 0.000206348, -0.0247877, 0.999658)
bones/46/scale = Vector3(1, 1, 1)
bones/47/position = Vector3(-2.34886e-11, 0.000138174, 4.93914e-11)
bones/47/rotation = Quaternion(-0.293988, 0.00889438, 0.0103688, 0.955711)
bones/47/scale = Vector3(1, 1, 1)
bones/48/position = Vector3(2.96571e-11, 0.000251234, -1.2278e-09)
bones/48/rotation = Quaternion(-0.305115, 0.0310118, -0.0368574, 0.951097)
bones/48/scale = Vector3(1, 1, 1)
bones/49/position = Vector3(-1.08562e-11, 0.000722322, 1.55834e-10)
bones/49/rotation = Quaternion(1.52407e-07, -0.625646, 1.86666e-07, 0.780107)
bones/49/scale = Vector3(1, 1, 1)
bones/50/position = Vector3(-7.90085e-12, -9.52131e-11, -1.58929e-12)
bones/50/rotation = Quaternion(1.44832e-08, 0.243128, -1.11735e-07, 0.969994)
bones/50/scale = Vector3(1, 1, 1)
bones/51/position = Vector3(-1.31103e-09, 0.000674602, -0.000463633)
bones/51/rotation = Quaternion(-0.722179, 0.0435407, 0.04519, 0.688854)
bones/51/scale = Vector3(1, 1, 1)
bones/52/position = Vector3(1.42024e-16, 0.00114845, 5.22483e-12)
bones/52/rotation = Quaternion(0.476361, -0.0322499, 0.0538279, 0.877008)
bones/52/scale = Vector3(1, 1, 1)

[node name="AnimationTree" type="AnimationTree" parent="SquirrelLumberjack"]
tree_root = SubResource("AnimationNodeBlendTree_qeubx")
anim_player = NodePath("../AnimationPlayer")
parameters/Blend2/blend_amount = 1.06

[node name="WolfTraveller" parent="." instance=ExtResource("5_0ku5y")]
transform = Transform3D(-0.709558, 0, -0.704647, 0, 1, 0, 0.704647, 0, -0.709558, 31.6874, 0, 11.8577)

[node name="Skeleton3D" parent="WolfTraveller/root" index="0"]
bones/1/position = Vector3(-2.50618e-11, 0.00379498, 1.01734e-05)
bones/1/rotation = Quaternion(0.00425437, 0.0219909, 0.0108664, 0.99969)
bones/1/scale = Vector3(1, 1, 1)
bones/2/position = Vector3(0.000699777, 5.20417e-18, -1.97728e-09)
bones/2/rotation = Quaternion(0.697051, 0.0653544, 0.714036, -0.000157105)
bones/2/scale = Vector3(1, 1, 1)
bones/3/position = Vector3(6.19577e-13, 0.00147782, 5.21274e-11)
bones/3/rotation = Quaternion(5.21834e-08, -2.28221e-08, 0.178958, 0.983857)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(6.36085e-12, 0.00215671, -3.75266e-11)
bones/4/rotation = Quaternion(0.595286, 0.242678, -0.412862, 0.645203)
bones/4/scale = Vector3(1, 1, 1)
bones/5/position = Vector3(3.43962e-11, 0.000416751, 1.44537e-10)
bones/5/rotation = Quaternion(0.0189045, 0.99955, 0.0226869, 0.0051733)
bones/5/scale = Vector3(1, 1, 1)
bones/6/position = Vector3(-1.56772e-11, 0.00107836, -7.31875e-11)
bones/6/rotation = Quaternion(-1.60806e-07, -0.414624, -9.9517e-08, 0.909993)
bones/6/scale = Vector3(1, 1, 1)
bones/7/position = Vector3(-1.01727e-11, -1.643e-13, 5.65387e-11)
bones/7/rotation = Quaternion(-4.01806e-08, -0.213899, -3.84501e-08, 0.976856)
bones/7/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(-0.000699777, -6.07153e-18, 1.97877e-09)
bones/8/rotation = Quaternion(0.738488, -0.0808125, -0.668153, 0.0409514)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(-4.97086e-12, 0.00147782, -5.43556e-12)
bones/9/rotation = Quaternion(1.65681e-08, 4.27515e-08, -0.250525, 0.96811)
bones/9/scale = Vector3(1, 1, 1)
bones/10/position = Vector3(4.30956e-12, 0.00215671, 7.63938e-12)
bones/10/rotation = Quaternion(-0.583992, 0.263813, -0.445277, -0.625368)
bones/10/scale = Vector3(1, 1, 1)
bones/11/position = Vector3(3.53436e-13, 0.000416751, -2.47494e-12)
bones/11/rotation = Quaternion(-0.0191084, 0.997576, 0.0667734, -0.00433347)
bones/11/scale = Vector3(1, 1, 1)
bones/12/position = Vector3(7.73241e-11, 0.00107836, 7.98764e-12)
bones/12/rotation = Quaternion(-4.71299e-08, 0.373979, 5.31509e-08, 0.927437)
bones/13/position = Vector3(-7.50464e-12, 3.56269e-15, -3.29375e-12)
bones/13/rotation = Quaternion(-4.236e-09, 0.155556, 5.62053e-09, 0.987827)
bones/13/scale = Vector3(1, 1, 1)
bones/14/position = Vector3(1.68266e-10, 0.000806044, 2.43365e-05)
bones/14/rotation = Quaternion(0.0554465, 3.45097e-06, -1.91678e-07, 0.998462)
bones/14/scale = Vector3(1, 1, 1)
bones/15/position = Vector3(4.84223e-05, 0.000681583, -0.000257723)
bones/15/rotation = Quaternion(-0.00660016, -1.34452e-09, 1.60603e-09, 0.999978)
bones/15/scale = Vector3(1, 1, 1)
bones/16/position = Vector3(-5.20616e-05, 0.000743148, 0.000469302)
bones/16/rotation = Quaternion(-0.140474, 1.42898e-14, 2.02745e-15, 0.990084)
bones/16/scale = Vector3(1, 1, 1)
bones/17/position = Vector3(3.02149e-12, 0.000803724, -2.02799e-10)
bones/17/rotation = Quaternion(0.12144, -0.0238026, 0.00143289, 0.992312)
bones/17/scale = Vector3(1, 1, 1)
bones/18/position = Vector3(-1.03559e-17, 0.000454168, 8.57551e-11)
bones/18/rotation = Quaternion(-0.0295113, 0.187639, -0.00564022, 0.981779)
bones/18/scale = Vector3(1, 1, 1)
bones/19/position = Vector3(-0.000459528, 0.000266417, -0.000118671)
bones/19/rotation = Quaternion(-0.489139, 0.425481, 0.54565, 0.531013)
bones/19/scale = Vector3(1, 1, 1)
bones/20/position = Vector3(-2.98023e-11, 0.000500425, -5.74115e-14)
bones/20/rotation = Quaternion(-0.5057, -0.303898, -0.183666, 0.786244)
bones/20/scale = Vector3(1, 1, 1)
bones/21/position = Vector3(1.79095e-12, 0.00144317, -2.8302e-10)
bones/21/rotation = Quaternion(1.47877e-07, -1.4127e-08, 0.553861, 0.832609)
bones/21/scale = Vector3(1, 1, 1)
bones/22/position = Vector3(2.38552e-11, 0.00144464, 6.89906e-10)
bones/22/rotation = Quaternion(0.0698171, -0.121828, -0.0491859, 0.98887)
bones/22/scale = Vector3(1, 1, 1)
bones/23/position = Vector3(-0.000231544, 0.000189973, -0.000102984)
bones/23/rotation = Quaternion(-0.126747, -0.656605, 0.236856, 0.704772)
bones/23/scale = Vector3(1, 1, 1)
bones/24/position = Vector3(-3.71286e-10, 0.000285259, 3.23934e-10)
bones/24/rotation = Quaternion(-0.142544, -0.0213863, -0.0556561, 0.987991)
bones/24/scale = Vector3(1, 1, 1)
bones/25/position = Vector3(9.64283e-10, 0.000156301, -2.25179e-10)
bones/25/rotation = Quaternion(-0.103496, -0.0267702, -0.0371655, 0.993575)
bones/25/scale = Vector3(1, 1, 1)
bones/26/position = Vector3(-0.000214326, 0.000502337, -2.44691e-05)
bones/26/rotation = Quaternion(0.0122504, -0.0405832, -0.0250062, 0.998788)
bones/26/scale = Vector3(1, 1, 1)
bones/27/position = Vector3(5.47627e-11, 9.01242e-05, -6.53711e-10)
bones/27/rotation = Quaternion(-0.0966549, 0.0510887, 0.0409683, 0.993161)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(-3.29599e-11, 0.000235625, -5.11503e-11)
bones/28/rotation = Quaternion(-0.29593, 0.157345, -0.269514, 0.902791)
bones/29/position = Vector3(-2.98535e-05, 0.000113964, -4.95265e-06)
bones/29/rotation = Quaternion(0.025899, 0.895142, -0.00358996, 0.445014)
bones/29/scale = Vector3(1, 0.999999, 1)
bones/30/position = Vector3(2.07021e-10, 0.000365999, 3.59892e-10)
bones/30/rotation = Quaternion(0.0258986, 0.895142, -0.0035909, -0.445015)
bones/30/scale = Vector3(1, 1, 1)
bones/31/position = Vector3(-1.74583e-10, 0.000138173, 4.24835e-10)
bones/31/rotation = Quaternion(-0.14667, 0.0024912, -0.0371634, 0.988484)
bones/31/scale = Vector3(1, 1, 1)
bones/32/position = Vector3(-1.21455e-11, 0.000251235, -4.27847e-11)
bones/32/rotation = Quaternion(-0.424562, 0.00261747, -0.00514835, 0.90538)
bones/32/scale = Vector3(1, 1, 1)
bones/33/position = Vector3(1.08562e-11, 0.000722322, 1.55834e-10)
bones/33/rotation = Quaternion(-2.69144e-07, -0.118876, 1.51283e-08, 0.992909)
bones/33/scale = Vector3(1, 1, 1)
bones/34/position = Vector3(7.90085e-12, -9.52131e-11, -1.58929e-12)
bones/34/rotation = Quaternion(6.55996e-08, 0.262047, -1.68961e-07, 0.965055)
bones/34/scale = Vector3(1, 1, 1)
bones/35/position = Vector3(0.000267876, 0.000212498, -6.37043e-05)
bones/35/rotation = Quaternion(-0.449627, -0.471432, -0.521227, 0.55128)
bones/35/scale = Vector3(1, 1, 1)
bones/36/position = Vector3(2.98023e-11, 0.000500425, -5.73994e-14)
bones/36/rotation = Quaternion(-0.529805, 0.321277, 0.100438, 0.77846)
bones/36/scale = Vector3(1, 1, 1)
bones/37/position = Vector3(-1.79095e-12, 0.00144317, -2.8302e-10)
bones/37/rotation = Quaternion(-5.87663e-08, 5.75725e-09, -0.539497, 0.841988)
bones/37/scale = Vector3(1, 1, 1)
bones/38/position = Vector3(-2.38552e-11, 0.00144464, 6.89906e-10)
bones/38/rotation = Quaternion(0.00768546, 0.0161797, 0.119073, 0.992724)
bones/38/scale = Vector3(1, 1, 1)
bones/39/position = Vector3(0.000231544, 0.000189973, -0.000102984)
bones/39/rotation = Quaternion(0.0353987, 0.613956, -0.232322, 0.753546)
bones/39/scale = Vector3(1, 1, 1)
bones/40/position = Vector3(3.71286e-10, 0.000285259, 3.23934e-10)
bones/40/rotation = Quaternion(-0.0974449, 0.0159175, 0.0202413, 0.994908)
bones/40/scale = Vector3(1, 1, 1)
bones/41/position = Vector3(-9.64283e-10, 0.000156301, -2.25179e-10)
bones/41/rotation = Quaternion(-0.103496, 0.0267702, 0.0371655, 0.993575)
bones/41/scale = Vector3(1, 1, 1)
bones/42/position = Vector3(0.000201606, 0.000510382, -2.46987e-05)
bones/42/rotation = Quaternion(-0.050931, 0.00166633, -0.0358987, 0.998055)
bones/42/scale = Vector3(1, 1, 1)
bones/43/position = Vector3(-5.47627e-11, 9.01242e-05, -6.53711e-10)
bones/43/rotation = Quaternion(-0.0749452, -0.00730216, 0.0548797, 0.99565)
bones/43/scale = Vector3(1, 1, 1)
bones/44/position = Vector3(3.29599e-11, 0.000235625, -5.11503e-11)
bones/44/rotation = Quaternion(-0.292791, 0.00714712, 0.109201, 0.949894)
bones/44/scale = Vector3(1, 1, 1)
bones/45/position = Vector3(1.81396e-05, 0.00011605, -6.08509e-06)
bones/45/rotation = Quaternion(0.00831989, -0.000206316, 0.0247876, 0.999658)
bones/45/scale = Vector3(1, 1, 1)
bones/46/position = Vector3(-4.6528e-12, 0.000365999, -7.88562e-14)
bones/46/rotation = Quaternion(-0.00831895, 0.000206348, -0.0247877, 0.999658)
bones/46/scale = Vector3(1, 1, 1)
bones/47/position = Vector3(-2.34886e-11, 0.000138174, 4.93914e-11)
bones/47/rotation = Quaternion(-0.205444, 0.00996482, 0.00957459, 0.978571)
bones/47/scale = Vector3(1, 1, 1)
bones/48/position = Vector3(2.96571e-11, 0.000251234, -1.2278e-09)
bones/48/rotation = Quaternion(-0.295718, 0.030675, -0.0371462, 0.95406)
bones/48/scale = Vector3(1, 1, 1)
bones/49/position = Vector3(-1.08562e-11, 0.000722322, 1.55834e-10)
bones/49/rotation = Quaternion(3.66731e-08, 0.0155921, -5.65442e-08, 0.999878)
bones/49/scale = Vector3(1, 1, 1)
bones/50/position = Vector3(-7.90085e-12, -9.52131e-11, -1.58929e-12)
bones/50/rotation = Quaternion(1.79872e-08, -0.301691, -6.15173e-08, 0.953406)
bones/50/scale = Vector3(1, 1, 1)
bones/51/position = Vector3(-1.31103e-09, 0.000674602, -0.000463633)
bones/51/rotation = Quaternion(-0.692042, 0.0661081, 0.063891, 0.715979)
bones/51/scale = Vector3(1, 1, 1)
bones/52/position = Vector3(1.42024e-16, 0.00114845, 5.22483e-12)
bones/52/rotation = Quaternion(0.510416, -0.0444089, 0.0804958, 0.855)
bones/52/scale = Vector3(1, 1, 1)

[node name="AnimationTree" type="AnimationTree" parent="WolfTraveller"]
tree_root = SubResource("AnimationNodeAnimation_tj7du")
anim_player = NodePath("../AnimationPlayer")

[node name="CutsceneLogic" type="Node3D" parent="."]
script = ExtResource("7_tj7du")

[node name="TextBox" parent="CutsceneLogic" instance=ExtResource("7_0ku5y")]
visible = false

[node name="Entrance" type="Timer" parent="CutsceneLogic"]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="level_changed" from="CutsceneLogic" to="." method="_on_level_transition_level_changed"]
[connection signal="finished" from="CutsceneLogic/TextBox" to="CutsceneLogic" method="_on_text_box_finished"]
[connection signal="timeout" from="CutsceneLogic/Entrance" to="CutsceneLogic" method="_on_entrance_timeout"]

[editable path="SquirrelLumberjack"]
[editable path="WolfTraveller"]
